shawk/awk/rdpg/src/compiler/tests/accept/misc/err_eol.txt
rdpg-comp.awk: error: data/misc/err_eol.rdpg:1:12
unexpected: 'EOI' after 'non-terminal' with value 'foo'
  expected: '?', '*' , '+' , 'terminal' , '\' , 'non-terminal' , '|' , ';' 
    1 | start : foo
      |            ^
